--- a/Client/src/app/layouts/full/header/header.component.html
+++ b/Client/src/app/layouts/full/header/header.component.html
@@ -8,45 +8,22 @@
   <!-- --------------------------------------------------------------- -->
   <span class="flex-1-auto"></span>
   <span class="d-lg-block">Logged In as: &nbsp;<strong>John Doe</strong></span>
-  <button
-    mat-icon-button
-    [matMenuTriggerFor]="profilemenu"
-    aria-label="Notifications"
-  >
-    <img
-      src="/assets/images/profile/user-1.jpg"
-      class="rounded-circle object-cover"
-      width="35"
-    />
+  <button mat-icon-button [matMenuTriggerFor]="profilemenu" aria-label="Notifications">
+    <img src="/assets/images/profile/user-1.jpg" class="rounded-circle object-cover" width="35" />
   </button>
   <mat-menu #profilemenu="matMenu" class="topbar-dd cardWithShadow">
     <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"
-        ><i-tabler name="user" class="icon-18 d-flex"></i-tabler></mat-icon
-      >My Profile
+      <mat-icon class="d-flex align-items-center"><i-tabler name="user" class="icon-18 d-flex"></i-tabler></mat-icon>My Profile
     </button>
     <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"
-        ><i-tabler name="mail" class="icon-18 d-flex"></i-tabler></mat-icon
-      >My Account
+      <mat-icon class="d-flex align-items-center"><i-tabler name="mail" class="icon-18 d-flex"></i-tabler></mat-icon>My Account
     </button>
     <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"
-        ><i-tabler
-          name="list-check"
-          class="icon-18 d-flex"
-        ></i-tabler></mat-icon
-      >My Task
+      <mat-icon class="d-flex align-items-center"><i-tabler name="list-check" class="icon-18 d-flex"></i-tabler></mat-icon>My Task
     </button>
 
     <div class="p-x-12 m-t-12">
-      <a
-        [routerLink]="['/authentication/login']"
-        mat-stroked-button
-        color="primary"
-        class="w-100"
-        >Logout</a
-      >
+      <a [routerLink]="['/authentication/login']" mat-stroked-button color="primary" class="w-100">Logout</a>
     </div>
   </mat-menu>
 </mat-toolbar>
