Login/logout functionality

--- a/Client/src/app/layouts/full/header/header.component.html
+++ b/Client/src/app/layouts/full/header/header.component.html
@@ -23,7 +23,7 @@
     </button>
 
     <div class="p-x-12 m-t-12">
-      <a [routerLink]="['/authentication/login']" mat-stroked-button color="primary" class="w-100">Logout</a>
+      <a mat-stroked-button color="primary" (click)="logout()" class="w-100">Logout</a>
     </div>
   </mat-menu>
 </mat-toolbar>
