First working query!! (Popular books by timeframe - Chief Librarian)

--- a/Client/src/app/pages/decision-maker-queries/chief-librarian/chief-librarian.component.html
+++ b/Client/src/app/pages/decision-maker-queries/chief-librarian/chief-librarian.component.html
@@ -1,9 +1,190 @@
-<!-- ============================================================== -->
-<!-- Simple four boxes Row -->
-<!-- ============================================================== -->
-<mat-card class="cardWithShadow">
+<mat-card class="cardWithShadow theme-card">
+  <mat-card-header>
+    <mat-card-title class="m-b-0">Chief Librarian</mat-card-title>
+    <mat-card-subtitle class="mat-body-1">Queries for the Chief Librarian only. If you are not logged in as this user, requests will be blocked by role-based access control.</mat-card-subtitle>
+  </mat-card-header>
   <mat-card-content>
-    <mat-card-title>Chief Librarian</mat-card-title>
-    <mat-card-subtitle class="mat-body-1">This is test page</mat-card-subtitle>
+    <div class="row">
+      <!-- GetPopularBooksByMonth -->
+      <div class="col-lg-12">
+        <mat-card class="b-1 shadow-none">
+          <mat-card-header>
+            <mat-card-title>Popular books by month</mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="b-t-1">
+            <div class="row">
+              <div class="col-lg-5">
+                <div class="row" style="justify-content: space-around">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Course ID</mat-label>
+                      <input matInput type="number" [formControl]="courseId" required />
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Records to fetch</mat-label>
+                      <input matInput type="number" [formControl]="fetchnum" required />
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row" style="justify-content: space-around">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Year</mat-label>
+                      <input matInput type="number" [formControl]="year" required />
+                      <mat-hint>2018 - 2024</mat-hint>
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Value</mat-label>
+                      <input matInput type="number" [formControl]="value" required />
+                      <mat-hint>E.G. 28 for week 28</mat-hint>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row" style="justify-content: space-around">
+                  <mat-form-field>
+                    <mat-label>Operator</mat-label>
+                    <mat-select [(ngModel)]="timeframe" required>
+                      <mat-option value="Year">Year</mat-option>
+                      <mat-option value="Quarter">Quarter</mat-option>
+                      <mat-option value="Month">Month</mat-option>
+                      <mat-option value="Week">Week</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                  <button mat-flat-button color="warn" (click)="resetGetPopularBooksByMonth()">Clear</button>
+                  <button mat-flat-button color="primary" (click)="callGetPopularBooksByMonth()">Get Report</button>
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <!-- Results Table -->
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                  <!-- Book Title Column -->
+                  <ng-container matColumnDef="title">
+                    <th mat-header-cell *matHeaderCellDef>Book Title</th>
+                    <td mat-cell *matCellDef="let element">{{ element.TITLE }}</td>
+                  </ng-container>
+
+                  <!-- Author Column -->
+                  <ng-container matColumnDef="author">
+                    <th mat-header-cell *matHeaderCellDef>Author</th>
+                    <td mat-cell *matCellDef="let element">{{ element.AUTHOR }}</td>
+                  </ng-container>
+
+                  <!-- loans Column -->
+                  <ng-container matColumnDef="loans">
+                    <th mat-header-cell *matHeaderCellDef># of loans</th>
+                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LOANS }}</td>
+                  </ng-container>
+
+                  <!-- fines Column -->
+                  <ng-container matColumnDef="fines">
+                    <th mat-header-cell *matHeaderCellDef># of fines</th>
+                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_FINES }}</td>
+                  </ng-container>
+
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                </table>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <!-- End of GetPopularBooksByMonth -->
+    </div>
+    <div class="row">
+      <!-- Query2 -->
+      <div class="col-lg-12">
+        <mat-card class="b-1 shadow-none">
+          <mat-card-header>
+            <mat-card-title>Query2</mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="b-t-1">
+            <div class="row">
+              <div class="col-lg-5">
+                <div class="row" style="justify-content: space-around">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Course ID</mat-label>
+                      <input matInput type="number" [formControl]="courseId" required />
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Records to fetch</mat-label>
+                      <input matInput type="number" [formControl]="fetchnum" required />
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row" style="justify-content: space-around">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Year</mat-label>
+                      <input matInput type="number" [formControl]="year" required />
+                      <mat-hint>2018 - 2024</mat-hint>
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Value</mat-label>
+                      <input matInput type="number" [formControl]="value" required />
+                      <mat-hint>E.G. 28 for week 28</mat-hint>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row" style="justify-content: space-around">
+                  <mat-form-field>
+                    <mat-label>Operator</mat-label>
+                    <mat-select [(ngModel)]="timeframe" required>
+                      <mat-option value="Year">Year</mat-option>
+                      <mat-option value="Quarter">Quarter</mat-option>
+                      <mat-option value="Month">Month</mat-option>
+                      <mat-option value="Week">Week</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                  <button mat-flat-button color="warn" (click)="resetQuery2()">Clear</button>
+                  <button mat-flat-button color="primary" (click)="callQuery2()">Get Report</button>
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <!-- Results Table -->
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                  <!-- Book Title Column -->
+                  <ng-container matColumnDef="title">
+                    <th mat-header-cell *matHeaderCellDef>Book Title</th>
+                    <td mat-cell *matCellDef="let element">{{ element.TITLE }}</td>
+                  </ng-container>
+
+                  <!-- Author Column -->
+                  <ng-container matColumnDef="author">
+                    <th mat-header-cell *matHeaderCellDef>Author</th>
+                    <td mat-cell *matCellDef="let element">{{ element.AUTHOR }}</td>
+                  </ng-container>
+
+                  <!-- loans Column -->
+                  <ng-container matColumnDef="loans">
+                    <th mat-header-cell *matHeaderCellDef># of loans</th>
+                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LOANS }}</td>
+                  </ng-container>
+
+                  <!-- fines Column -->
+                  <ng-container matColumnDef="fines">
+                    <th mat-header-cell *matHeaderCellDef># of fines</th>
+                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_FINES }}</td>
+                  </ng-container>
+
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                </table>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <!-- End of Query2 -->
+    </div>
   </mat-card-content>
 </mat-card>
