--- a/Client/src/assets/scss/overrides/_card.scss
+++ b/Client/src/assets/scss/overrides/_card.scss
@@ -3,12 +3,14 @@
   margin-bottom: 30px;
   border-radius: $border-radius;
 }
+
 .mat-mdc-card-header {
   padding: 24px 24px 0;
 }
 
 .mat-mdc-card-content {
   padding: 0 24px;
+  margin-bottom: 1em;
 }
 
 .mat-mdc-card {
@@ -31,6 +33,7 @@
   .mat-mdc-card-header {
     padding: 16px 24px;
   }
+
   .mat-mdc-card-content {
     padding: 24px;
   }
