--- a/Client/src/app/pages/decision-maker-queries/vice-chancellor/vice-chancellor.component.html
+++ b/Client/src/app/pages/decision-maker-queries/vice-chancellor/vice-chancellor.component.html
@@ -1,9 +1,158 @@
-<!-- ============================================================== -->
-<!-- Simple four boxes Row -->
-<!-- ============================================================== -->
-<mat-card class="cardWithShadow">
+<mat-card class="cardWithShadow theme-card">
+  <mat-card-header>
+    <mat-card-title class="m-b-0">Vice Chancellor</mat-card-title>
+    <mat-card-subtitle class="mat-body-1">Queries for the Vice Chancellor only. If you are not logged in as this user, requests will be blocked by role-based access control.</mat-card-subtitle>
+  </mat-card-header>
   <mat-card-content>
-    <mat-card-title>Vice Chancellor</mat-card-title>
-    <mat-card-subtitle class="mat-body-1">This is test page</mat-card-subtitle>
+    <div class="row">
+      <!-- GetPopularBooksByMonth -->
+      <div class="col-lg-12">
+        <mat-card class="b-1 shadow-none">
+          <mat-card-header>
+            <mat-card-title>Most active departments </mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="b-t-1">
+            <div class="row">
+              <div class="col-lg-5">
+                <div class="row" style="justify-content: space-around">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Year</mat-label>
+                      <input matInput type="number" [formControl]="year" required />
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Timeframe Value</mat-label>
+                      <input matInput type="number" [formControl]="value" required />
+                      <mat-hint>E.G. 28 for week 28</mat-hint>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row" style="justify-content: space-around">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field>
+                      <mat-label>Timeframe</mat-label>
+                      <mat-select [(ngModel)]="timeframe" required>
+                        <mat-option value="Year">Year</mat-option>
+                        <mat-option value="Quarter">Quarter</mat-option>
+                        <mat-option value="Month">Month</mat-option>
+                        <mat-option value="Week">Week</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Records to fetch</mat-label>
+                      <input matInput type="number" [formControl]="fetchnum" required />
+                    </mat-form-field>
+                  </div>
+                  <div class="row" style="justify-content: space-around">
+                    <button mat-flat-button color="warn" (click)="resetMostActiveDepartment()">Clear</button>
+                    <button mat-flat-button color="primary" (click)="callMostActiveDepartmentByMonth()">Get Report</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <!-- Results Table -->
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                  <!-- Book Title Column -->
+                  <ng-container matColumnDef="courseid">
+                    <th mat-header-cell *matHeaderCellDef>Course ID</th>
+                    <td mat-cell *matCellDef="let element">{{ element.COURSE_ID }}</td>
+                  </ng-container>
+
+                  <!-- Author Column -->
+                  <ng-container matColumnDef="coursename">
+                    <th mat-header-cell *matHeaderCellDef>Course name</th>
+                    <td mat-cell *matCellDef="let element">{{ element.COURSE_NAME }}</td>
+                  </ng-container>
+
+                  <!-- loans Column -->
+                  <ng-container matColumnDef="loans">
+                    <th mat-header-cell *matHeaderCellDef># of loans</th>
+                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LOANS }}</td>
+                  </ng-container>
+
+                  <!-- fines Column -->
+                  <ng-container matColumnDef="fines">
+                    <th mat-header-cell *matHeaderCellDef># of fines</th>
+                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_FINES }}</td>
+                  </ng-container>
+
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                </table>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <!-- End of GetPopularBooksByMonth -->
+    </div>
+    <div class="row">
+      <!-- TotalIncomeFromFinesByDate -->
+      <div class="col-lg-12">
+        <mat-card class="b-1 shadow-none">
+          <mat-card-header>
+            <mat-card-title>Total income from fines</mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="b-t-1">
+            <div class="row">
+              <div class="col-lg-5">
+                <div class="row" style="justify-content: space-around">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Year</mat-label>
+                      <input matInput type="number" [formControl]="year1" required />
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field class="w-100" appearance="outline">
+                      <mat-label>Value</mat-label>
+                      <input matInput type="number" [formControl]="value1" required />
+                      <mat-hint>E.G. 28 for week 28</mat-hint>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row" style="justify-content: space-around">
+                  <mat-form-field>
+                    <mat-label>Operator</mat-label>
+                    <mat-select [(ngModel)]="timeframe1" required>
+                      <mat-option value="Year">Year</mat-option>
+                      <mat-option value="Quarter">Quarter</mat-option>
+                      <mat-option value="Month">Month</mat-option>
+                      <mat-option value="Week">Week</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                  <button mat-flat-button color="warn" (click)="resetTotalIncomeFromFinesByDate()">Clear</button>
+                  <button mat-flat-button color="primary" (click)="callTotalIncomeFromFines()">Get Report</button>
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <!-- Results Table -->
+                <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
+                  <!-- loancount Column -->
+                  <ng-container matColumnDef="loancount">
+                    <th mat-header-cell *matHeaderCellDef>Number of loans</th>
+                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LOANS }}</td>
+                  </ng-container>
+
+                  <!-- finestotal Column -->
+                  <ng-container matColumnDef="finestotal">
+                    <th mat-header-cell *matHeaderCellDef>Total Income</th>
+                    <td mat-cell *matCellDef="let element">£{{ element.TOTAL_FINES_INCOME }}</td>
+                  </ng-container>
+
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
+                </table>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <!-- End of TotalIncomeFromFinesByDate -->
+    </div>
   </mat-card-content>
 </mat-card>
