Display logged in user name in header

--- a/Client/src/app/layouts/full/header/header.component.html
+++ b/Client/src/app/layouts/full/header/header.component.html
@@ -7,7 +7,9 @@
   <!-- profile Dropdown -->
   <!-- --------------------------------------------------------------- -->
   <span class="flex-1-auto"></span>
-  <span class="d-lg-block">Logged In as: &nbsp;<strong>John Doe</strong></span>
+  <span class="d-lg-block"
+    >Logged In as: &nbsp;<strong>{{ username }}</strong></span
+  >
   <button mat-icon-button [matMenuTriggerFor]="profilemenu" aria-label="Notifications">
     <img src="/assets/images/profile/user-1.jpg" class="rounded-circle object-cover" width="35" />
   </button>
