--- a/Client/src/app/layouts/full/header/header.component.html
+++ b/Client/src/app/layouts/full/header/header.component.html
@@ -14,7 +14,7 @@
     <img src="/assets/images/profile/user-1.jpg" class="rounded-circle object-cover" width="35" />
   </button>
   <mat-menu #profilemenu="matMenu" class="topbar-dd cardWithShadow">
-    <button mat-menu-item>
+    <!--<button mat-menu-item>
       <mat-icon class="d-flex align-items-center"><i-tabler name="user" class="icon-18 d-flex"></i-tabler></mat-icon>My Profile
     </button>
     <button mat-menu-item>
@@ -22,7 +22,7 @@
     </button>
     <button mat-menu-item>
       <mat-icon class="d-flex align-items-center"><i-tabler name="list-check" class="icon-18 d-flex"></i-tabler></mat-icon>My Task
-    </button>
+    </button>-->
 
     <div class="p-x-12 m-t-12">
       <a mat-stroked-button color="primary" (click)="logout()" class="w-100">Logout</a>
