--- a/Client/src/app/pages/decision-maker-queries/departmental-heads/departmental-heads.component.html
+++ b/Client/src/app/pages/decision-maker-queries/departmental-heads/departmental-heads.component.html
@@ -158,6 +158,8 @@
                       <mat-option value="Week">Week</mat-option>
                     </mat-select>
                   </mat-form-field>
+                </div>
+                <div class="row">
                   <button mat-flat-button color="warn" (click)="resetGetMostActiveStudents()">Clear</button>
                   <button mat-flat-button color="primary" (click)="callGetMostActiveStudents()">Get Report</button>
                 </div>
