--- a/Client/src/app/pages/decision-maker-queries/chief-librarian/chief-librarian.component.html
+++ b/Client/src/app/pages/decision-maker-queries/chief-librarian/chief-librarian.component.html
@@ -43,16 +43,20 @@
                     </mat-form-field>
                   </div>
                 </div>
-                <div class="row" style="justify-content: space-around">
-                  <mat-form-field>
-                    <mat-label>Timeframe</mat-label>
-                    <mat-select [(ngModel)]="timeframe" required>
-                      <mat-option value="Year">Year</mat-option>
-                      <mat-option value="Quarter">Quarter</mat-option>
-                      <mat-option value="Month">Month</mat-option>
-                      <mat-option value="Week">Week</mat-option>
-                    </mat-select>
-                  </mat-form-field>
+                <div class="row">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field>
+                      <mat-label>Timeframe</mat-label>
+                      <mat-select [(ngModel)]="timeframe" required>
+                        <mat-option value="Year">Year</mat-option>
+                        <mat-option value="Quarter">Quarter</mat-option>
+                        <mat-option value="Month">Month</mat-option>
+                        <mat-option value="Week">Week</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row">
                   <button mat-flat-button color="warn" (click)="resetGetPopularBooksByMonth()">Clear</button>
                   <button mat-flat-button color="primary" (click)="callGetPopularBooksByMonth()">Get Report</button>
                 </div>
@@ -60,30 +64,22 @@
               <div class="col-lg-7">
                 <!-- Results Table -->
                 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-                  <!-- Book Title Column -->
                   <ng-container matColumnDef="title">
                     <th mat-header-cell *matHeaderCellDef>Book Title</th>
                     <td mat-cell *matCellDef="let element">{{ element.TITLE }}</td>
                   </ng-container>
-
-                  <!-- Author Column -->
                   <ng-container matColumnDef="author">
                     <th mat-header-cell *matHeaderCellDef>Author</th>
                     <td mat-cell *matCellDef="let element">{{ element.AUTHOR }}</td>
                   </ng-container>
-
-                  <!-- loans Column -->
                   <ng-container matColumnDef="loans">
                     <th mat-header-cell *matHeaderCellDef># of loans</th>
                     <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LOANS }}</td>
                   </ng-container>
-
-                  <!-- fines Column -->
                   <ng-container matColumnDef="fines">
                     <th mat-header-cell *matHeaderCellDef># of fines</th>
                     <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_FINES }}</td>
                   </ng-container>
-
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
                 </table>
@@ -133,16 +129,20 @@
                     </mat-form-field>
                   </div>
                 </div>
-                <div class="row" style="justify-content: space-around">
-                  <mat-form-field>
-                    <mat-label>Operator</mat-label>
-                    <mat-select [(ngModel)]="timeframe" required>
-                      <mat-option value="Year">Year</mat-option>
-                      <mat-option value="Quarter">Quarter</mat-option>
-                      <mat-option value="Month">Month</mat-option>
-                      <mat-option value="Week">Week</mat-option>
-                    </mat-select>
-                  </mat-form-field>
+                <div class="row">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field>
+                      <mat-label>Operator</mat-label>
+                      <mat-select [(ngModel)]="timeframe" required>
+                        <mat-option value="Year">Year</mat-option>
+                        <mat-option value="Quarter">Quarter</mat-option>
+                        <mat-option value="Month">Month</mat-option>
+                        <mat-option value="Week">Week</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row">
                   <button mat-flat-button color="warn" (click)="resetQuery2()">Clear</button>
                   <button mat-flat-button color="primary" (click)="callQuery2()">Get Report</button>
                 </div>
