--- a/Client/src/app/pages/decision-maker-queries/vice-chancellor/vice-chancellor.component.html
+++ b/Client/src/app/pages/decision-maker-queries/vice-chancellor/vice-chancellor.component.html
@@ -47,10 +47,10 @@
                       <input matInput type="number" [formControl]="fetchnum" required />
                     </mat-form-field>
                   </div>
-                  <div class="row" style="justify-content: space-around">
-                    <button mat-flat-button color="warn" (click)="resetMostActiveDepartment()">Clear</button>
-                    <button mat-flat-button color="primary" (click)="callMostActiveDepartmentByMonth()">Get Report</button>
-                  </div>
+                </div>
+                <div class="row">
+                  <button mat-flat-button color="warn" (click)="resetMostActiveDepartment()">Clear</button>
+                  <button mat-flat-button color="primary" (click)="callMostActiveDepartmentByMonth()">Get Report</button>
                 </div>
               </div>
               <div class="col-lg-7">
@@ -115,16 +115,20 @@
                     </mat-form-field>
                   </div>
                 </div>
-                <div class="row" style="justify-content: space-around">
-                  <mat-form-field>
-                    <mat-label>Operator</mat-label>
-                    <mat-select [(ngModel)]="timeframe1" required>
-                      <mat-option value="Year">Year</mat-option>
-                      <mat-option value="Quarter">Quarter</mat-option>
-                      <mat-option value="Month">Month</mat-option>
-                      <mat-option value="Week">Week</mat-option>
-                    </mat-select>
-                  </mat-form-field>
+                <div class="row">
+                  <div class="col-md-6 col-sm-12">
+                    <mat-form-field>
+                      <mat-label>Operator</mat-label>
+                      <mat-select [(ngModel)]="timeframe1" required>
+                        <mat-option value="Year">Year</mat-option>
+                        <mat-option value="Quarter">Quarter</mat-option>
+                        <mat-option value="Month">Month</mat-option>
+                        <mat-option value="Week">Week</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row">
                   <button mat-flat-button color="warn" (click)="resetTotalIncomeFromFinesByDate()">Clear</button>
                   <button mat-flat-button color="primary" (click)="callTotalIncomeFromFines()">Get Report</button>
                 </div>
