--- a/Client/src/app/pages/dashboard/dashboard.component.html
+++ b/Client/src/app/pages/dashboard/dashboard.component.html
@@ -24,26 +24,27 @@
       <div class="col-lg-12 col-sm-6">
         <mat-card class="cardWithShadow">
           <mat-card-content class="p-24">
-            <mat-card-title>Fines Yearly Breakup</mat-card-title>
+            <mat-card-title>Fines Income by Quarter</mat-card-title>
             <div class="row m-t-24">
               <div class="col-7">
-                <h4 class="mat-headline-5">£36,358</h4>
+                <h4 class="mat-headline-5">£{{ fineQuarterIncome }}</h4>
                 <div class="d-flex align-items-center m-t-16">
                   <button mat-mini-fab class="bg-light-success text-success shadow-none icon-27">
-                    <i-tabler name="arrow-up-right" class="icon-20"></i-tabler>
+                    <i-tabler *ngIf="fineQuarterChangeDirection == 'down'" name="arrow-down-right" class="icon-20"></i-tabler>
+                    <i-tabler *ngIf="fineQuarterChangeDirection == 'up'" name="arrow-up-right" class="icon-20"></i-tabler>
                   </button>
-                  <div class="mat-body-1 f-w-600 m-l-12">+9%</div>
-                  <div class="mat-body-1 m-l-4">last year</div>
+                  <div class="mat-body-1 f-w-600 m-l-12">{{ finesQuarterChangePercentage }}</div>
+                  <div class="mat-body-1 m-l-4">last quarter</div>
                 </div>
 
                 <div class="d-flex align-items-center m-t-32">
                   <div class="d-flex align-items-center">
                     <i-tabler name="circle-filled" class="text-primary icon-12 d-flex"></i-tabler>
-                    <div class="mat-body-1 m-l-12">2024</div>
+                    <div class="mat-body-1 m-l-12">{{ currentQuarter }}</div>
                   </div>
                   <div class="d-flex align-items-center m-l-16">
                     <i-tabler name="circle-filled" class="text-light-primary icon-12 d-flex"></i-tabler>
-                    <div class="mat-body-1 m-l-12">2023</div>
+                    <div class="mat-body-1 m-l-12">{{ lastQuarter }}</div>
                   </div>
                 </div>
               </div>
@@ -68,12 +69,13 @@
             </div>
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
-            <h4 class="mat-headline-5">£6,820</h4>
+            <h4 class="mat-headline-5">£{{ finesTotalThisMonth }}</h4>
             <div class="d-flex align-items-center m-t-16">
               <button mat-mini-fab class="bg-light-error text-error shadow-none icon-27">
-                <i-tabler name="arrow-down-right" class="icon-20"></i-tabler>
+                <i-tabler *ngIf="fineChangeDirection == 'down'" name="arrow-down-right" class="icon-20"></i-tabler>
+                <i-tabler *ngIf="fineChangeDirection == 'up'" name="arrow-up-right" class="icon-20"></i-tabler>
               </button>
-              <div class="mat-body-1 f-w-600 m-l-12">+9%</div>
+              <div class="mat-body-1 f-w-600 m-l-12">{{ finesChangePercentage }}</div>
               <div class="mat-body-1 m-l-4">last month</div>
             </div>
           </mat-card-content>
