--- a/Client/src/app/pages/dashboard/dashboard.component.html
+++ b/Client/src/app/pages/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
   <div class="col-lg-4">
     <div class="row">
       <!-- --------------------------------------------------------------------------- -->
-      <!-- Yearly Fines -->
+      <!-- Quarterly Fines -->
       <!-- --------------------------------------------------------------------------- -->
       <div class="col-lg-12 col-sm-6">
         <mat-card class="cardWithShadow">
@@ -64,7 +64,7 @@
             <mat-card-title>Monthly Fines</mat-card-title>
             <div class="m-l-auto">
               <button mat-fab color="accent" class="shadow-none icon-48">
-                <i-tabler name="currency-dollar" class="text-white d-flex"></i-tabler>
+                <i-tabler name="currency-pound" class="text-white d-flex"></i-tabler>
               </button>
             </div>
           </mat-card-header>
