Link to support articles

--- a/Client/src/app/layouts/full/header/header.component.html
+++ b/Client/src/app/layouts/full/header/header.component.html
@@ -19,10 +19,12 @@
     </button>
     <button mat-menu-item>
       <mat-icon class="d-flex align-items-center"><i-tabler name="mail" class="icon-18 d-flex"></i-tabler></mat-icon>My Account
-    </button>
-    <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"><i-tabler name="list-check" class="icon-18 d-flex"></i-tabler></mat-icon>My Task
     </button>-->
+    <a href="https://datawarehouseappuog.tawk.help/" target="_blank" style="text-decoration: none">
+      <button mat-menu-item>
+        <mat-icon class="d-flex align-items-center"><i-tabler name="help" class="icon-18 d-flex"></i-tabler></mat-icon>Knowledge Base
+      </button>
+    </a>
 
     <div class="p-x-12 m-t-12">
       <a mat-stroked-button color="primary" (click)="logout()" class="w-100">Logout</a>
