--- a/Client/src/app/pages/dashboard/dashboard.component.html
+++ b/Client/src/app/pages/dashboard/dashboard.component.html
@@ -29,10 +29,18 @@
               <div class="col-7">
                 <h4 class="mat-headline-5">£{{ fineQuarterIncome }}</h4>
                 <div class="d-flex align-items-center m-t-16">
-                  <button mat-mini-fab class="bg-light-success text-success shadow-none icon-27">
+                  <button
+                    mat-mini-fab
+                    [ngClass]="{
+                      'bg-light-success text-success': fineQuarterChangeDirection == 'up',
+                      'bg-light-error text-error;': fineQuarterChangeDirection == 'down'
+                    }"
+                    class="shadow-none icon-27"
+                  >
                     <i-tabler *ngIf="fineQuarterChangeDirection == 'down'" name="arrow-down-right" class="icon-20"></i-tabler>
                     <i-tabler *ngIf="fineQuarterChangeDirection == 'up'" name="arrow-up-right" class="icon-20"></i-tabler>
                   </button>
+
                   <div class="mat-body-1 f-w-600 m-l-12">{{ finesQuarterChangePercentage }}</div>
                   <div class="mat-body-1 m-l-4">last quarter</div>
                 </div>
@@ -71,7 +79,14 @@
           <mat-card-content class="m-b-32 p-x-24">
             <h4 class="mat-headline-5">£{{ finesTotalThisMonth }}</h4>
             <div class="d-flex align-items-center m-t-16">
-              <button mat-mini-fab class="bg-light-error text-error shadow-none icon-27">
+              <button
+                mat-mini-fab
+                [ngClass]="{
+                  'bg-light-success text-success': fineChangeDirection == 'up',
+                  'bg-light-error text-error': fineChangeDirection == 'down'
+                }"
+                class="shadow-none icon-27"
+              >
                 <i-tabler *ngIf="fineChangeDirection == 'down'" name="arrow-down-right" class="icon-20"></i-tabler>
                 <i-tabler *ngIf="fineChangeDirection == 'up'" name="arrow-up-right" class="icon-20"></i-tabler>
               </button>
