Styling bug fix

--- a/Client/src/app/pages/dashboard/dashboard.component.html
+++ b/Client/src/app/pages/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
                     mat-mini-fab
                     [ngClass]="{
                       'bg-light-success text-success': fineQuarterChangeDirection == 'up',
-                      'bg-light-error text-error;': fineQuarterChangeDirection == 'down'
+                      'bg-light-error text-error': fineQuarterChangeDirection == 'down'
                     }"
                     class="shadow-none icon-27"
                   >
