--- a/Client/src/app/pages/dashboard/dashboard.component.html
+++ b/Client/src/app/pages/dashboard/dashboard.component.html
@@ -77,7 +77,7 @@
             </div>
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
-            <h4 class="mat-headline-5">£{{ finesTotalThisMonth }}</h4>
+            <h4 class="mat-headline-5">£{{ finesTotalThisMonth.toFixed(2) }}</h4>
             <div class="d-flex align-items-center m-t-16">
               <button
                 mat-mini-fab
