--- a/Client/src/app/pages/decision-maker-queries/vice-chancellor/vice-chancellor.component.html
+++ b/Client/src/app/pages/decision-maker-queries/vice-chancellor/vice-chancellor.component.html
@@ -59,25 +59,25 @@
                   <!-- Book Title Column -->
                   <ng-container matColumnDef="courseid">
                     <th mat-header-cell *matHeaderCellDef>Course ID</th>
-                    <td mat-cell *matCellDef="let element">{{ element.COURSE_ID }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.course_id }}</td>
                   </ng-container>
 
                   <!-- Author Column -->
                   <ng-container matColumnDef="coursename">
                     <th mat-header-cell *matHeaderCellDef>Course name</th>
-                    <td mat-cell *matCellDef="let element">{{ element.COURSE_NAME }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.course_name }}</td>
                   </ng-container>
 
                   <!-- loans Column -->
                   <ng-container matColumnDef="loans">
                     <th mat-header-cell *matHeaderCellDef># of loans</th>
-                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LOANS }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.number_of_loans }}</td>
                   </ng-container>
 
                   <!-- fines Column -->
                   <ng-container matColumnDef="fines">
                     <th mat-header-cell *matHeaderCellDef># of fines</th>
-                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_FINES }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.number_of_fines }}</td>
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -139,13 +139,13 @@
                   <!-- loancount Column -->
                   <ng-container matColumnDef="loancount">
                     <th mat-header-cell *matHeaderCellDef>Number of loans</th>
-                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LOANS }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.number_of_loans }}</td>
                   </ng-container>
 
                   <!-- finestotal Column -->
                   <ng-container matColumnDef="finestotal">
                     <th mat-header-cell *matHeaderCellDef>Total Income</th>
-                    <td mat-cell *matCellDef="let element">£{{ element.TOTAL_FINES_INCOME }}</td>
+                    <td mat-cell *matCellDef="let element">£{{ element.total_fines_income }}</td>
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
